objects/zqu__ZProductFeature__c.object
<CustomObject>
    <description>The relationship between ZProduct and ZFeature</description>
    <fields>
        <fullName>zqu__ZFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZFeature</label>
        <referenceTo>zqu__ZFeature__c</referenceTo>
        <relationshipLabel>ZProductFeatures</relationshipLabel>
        <relationshipName>ZProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZProduct</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>ZProductFeatures</relationshipLabel>
        <relationshipName>ZProductFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zuora Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZProductFeature</label>
    <nameField>
        <label>ZProductFeature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZProductFeatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>